--- a/scontrini/main/templates/main.html
+++ b/scontrini/main/templates/main.html
@@ -1,18 +1,14 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-<head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
+{% extends "base.html" %}
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+{% load bootstrap3 %}
 
+{% block title %}Nuovo scontrino{% endblock %}
+
+{% block content %}
 	<style>
 		video { border: 1px solid #ccc; display: block; margin: 0 0 20px 0; }
 		#canvas { margin-top: 20px; border: 1px solid #ccc; display: block; }
 	</style>
-</head>
-
-<body>
 
     <div>
 	<!--
@@ -77,7 +73,4 @@
 	</script>
 
 </div>
-
-
-</body>
-</html>
+{% endblock %}
