--- a/scontrini/main/templates/base.html
+++ b/scontrini/main/templates/base.html
@@ -2,6 +2,8 @@
 
 {% load bootstrap3 %}
 
+{% block bootstrap3_title %}Scontrini{% endblock %}
+
 {% block bootstrap3_content %}
     <nav class="navbar navbar-default">
         <div class="container-fluid">
