--- a/scontrini/main/templates/base.html
+++ b/scontrini/main/templates/base.html
@@ -22,7 +22,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li><a href="{% url 'new-receipt' %}">Carica nuovo scontrino <span class="sr-only">(current)</span></a></li>
-                    <li><a href="{% url 'view-stats' %}">Vedi statistiche</a></li>
+{#                    <li><a href="{% url 'view-stats' %}">Vedi statistiche</a></li>#}
 {#                    <li class="dropdown">#}
 {#                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>#}
 {#                        <ul class="dropdown-menu">#}
