--- a/scontrini/main/templates/main/receipt_list.html
+++ b/scontrini/main/templates/main/receipt_list.html
@@ -7,7 +7,25 @@
 
 {% block content %}
     <div class="row">
-        <div class="col-xs-offset-5 col-xs-5">
+
+        <div class="col-xs-offset-3 col-xs-2">
+            <div class="dropdown">
+                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="true">
+                    Categoria
+                    <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu">
+                    {% for cat in categories %}
+                        <li><a href="?cat={{ cat.0 }}">{{ cat.1 }}</a></li>
+                    {% endfor %}
+                    <li role="separator" class="divider"></li>
+                    <li><a href=".">Tutte</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="col-xs-5">
             <form action="" method="get">
                 <div class="input-group">
                     <input type="text" class="form-control" placeholder="Search for..." name="q">
@@ -25,15 +43,24 @@
         </div>
     </div>
 
+    {% if selected_category %}
+        <div class="row">
+            <div class="col-xs-12">
+                Selected category: <span class="label label-primary">{{ selected_category }}</span>
+            </div>
+        </div>
+    {% endif %}
+
+    <hr>
+
     {% for receipt in object_list %}
-        <hr>
         <div class="row">
             <div class="col-xs-1">
             <span class="glyphicon {{ receipt.get_icon }} aria-hidden="true style="font-size: 24px; margin-top: 15px; margin-left: 15px;"></span>
             </div>
             <div class="col-xs-7">
                 <a href="{{ receipt.image.url }}"><p class="lead">{{ receipt.shop }}</p></a>
-                <p>{{ receipt.category }} / <small>{{ receipt.created|date }}</small></p>
+                <p><span class="label label-default">{{ receipt.category }}</span> / <small>{{ receipt.created|date }}</small></p>
             </div>
             <div class="col-xs-2">
                 <p class="lead">{{ receipt.price }}&euro;</p>
@@ -43,8 +70,9 @@
                 <a class="btn btn-default" href="{{ receipt.image.url }}"><span class="glyphicon glyphicon-download"></span></a>
             </div>
         </div>
+        <hr>
     {% empty %}
         <li>No receipts yet.</li>
-    {% endfor %}
         <hr>
+    {% endfor %}
 {% endblock %}
