--- a/scontrini/main/templates/main/receipt_list.html
+++ b/scontrini/main/templates/main/receipt_list.html
@@ -29,7 +29,7 @@
         <hr>
         <div class="row">
             <div class="col-xs-1">
-                <span class="glyphicon glyphicon-pencil" aria-hidden="true" style="font-size: 24px; margin-top: 15px; margin-left: 15px;"></span>
+            <span class="glyphicon {{ receipt.get_icon }} aria-hidden="true style="font-size: 24px; margin-top: 15px; margin-left: 15px;"></span>
             </div>
             <div class="col-xs-7">
                 <a href="{{ receipt.image.url }}"><p class="lead">{{ receipt.shop }}</p></a>
