--- a/scontrini/main/templates/main/receipt_list.html
+++ b/scontrini/main/templates/main/receipt_list.html
@@ -28,7 +28,7 @@
         <div class="col-xs-5">
             <form action="" method="get">
                 <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search for..." name="q">
+                    <input type="text" class="form-control" placeholder="Cerca" name="q">
                     <span class="input-group-btn">
                         <button class="btn btn-default" type="submit">
                             <span class="glyphicon glyphicon-search"></span>
