--- a/scontrini/main/templates/main/receipt_list.html
+++ b/scontrini/main/templates/main/receipt_list.html
@@ -59,7 +59,7 @@
             <span class="glyphicon glyphicon-{{ receipt.get_icon }}" title="{{ receipt.category }}" aria-hidden="true" style="font-size: 24px; margin-top: 15px; margin-left: 15px;"></span>
             </div>
             <div class="col-sm-7">
-                <a href="{{ receipt.image.url }}" title="View"><p class="lead">{{ receipt.shop }}</p></a>
+                <a href="{% url 'detail-receipt' pk=receipt.pk %}" title="View"><p class="lead">{{ receipt.shop }}</p></a>
                 <p><span class="label label-default">{{ receipt.category }}</span> / <small>{{ receipt.created|date }}</small></p>
             </div>
             <div class="col-sm-2">
@@ -67,7 +67,7 @@
             </div>
             <div class="col-sm-2">
                 <a class="btn btn-default" href="/edit/{{ receipt.pk }}" title="Edit"><span class="glyphicon glyphicon-pencil"></span></a>
-                <a class="btn btn-default" href="{{ receipt.image.url }}" title="View"><span class="glyphicon glyphicon-download"></span></a>
+                <a class="btn btn-default" href="{% url 'detail-receipt' pk=receipt.pk %}" title="View"><span class="glyphicon glyphicon-download"></span></a>
             </div>
         </div>
         <hr>
