fixed price selection

--- a/scontrini/main/templates/main/shop_select.html
+++ b/scontrini/main/templates/main/shop_select.html
@@ -24,6 +24,7 @@
                     </div>
                 {% endfor %}
 
+                <h2>Selezione Prezzo</h2>
                 {% for pprice in object.price_list%}
                     <div class="input-group">
                         <span class="input-group-addon">
