--- a/scontrini/main/templates/main/receipt_detail.html
+++ b/scontrini/main/templates/main/receipt_detail.html
@@ -43,4 +43,11 @@
             </a>
         </div>
     </div>
+    <div class="row">
+        <div class="col-xs-6">
+            <pre>
+                {{ object.ocr_text }}
+            </pre>
+        </div>
+    </div>
 {% endblock %}
