--- a/scontrini/main/templates/base.html
+++ b/scontrini/main/templates/base.html
@@ -21,7 +21,8 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li><a href="{% url 'new-receipt' %}">Carica nuovo scontrino <span class="sr-only">(current)</span></a></li>
+                    <li><a href="{% url 'home' %}">Lista scontrini</a></li>
+                    <li><a href="{% url 'new-receipt' %}">Carica nuovo scontrino</a></li>
                     <li><a href="{% url 'view-stats' %}">Vedi statistiche</a></li>
                 </ul>
             </div><!-- /.navbar-collapse -->
