--- a/scontrini/main/templates/main/receipt_detail.html
+++ b/scontrini/main/templates/main/receipt_detail.html
@@ -2,11 +2,36 @@
 
 {% load bootstrap3 %}
 
-{% block title %}{{ object.shop }}{% endblock %}
+{% block title %}
+    {{ object.shop }}
+    <small>{{ object.category }}</small>
+{% endblock %}
+
+{% block bootstrap3_extra_head %}
+    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
+    <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
+{% endblock %}
 
 {% block content %}
+    {% if object.has_position %}
     <div class="row">
-        <div class="col-xs-6 col-md-8">
+        <div class="col-md-12 col-xs-12" style="padding-bottom: 20px;">
+                <div id="mapid" style="height:200px; padding: 20px;"></div>
+                <script>
+                    var mymap = L.map('mapid').setView([{{ object.lat }}, {{ object.long }}], 15);
+                    L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token={accessToken}', {
+                        attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://mapbox.com">Mapbox</a>',
+                        maxZoom: 18,
+                        id: 'mapbox.streets',
+                        accessToken: 'pk.eyJ1IjoiZ2lnYXJvYnkiLCJhIjoiY2luY3dyOWU5MDA1M3cwbTVzOW5naGU0MSJ9.-XPrkqCrvTmkN4qsN_6prg'
+                    }).addTo(mymap);
+                    var marker = L.marker([{{ object.lat }}, {{ object.long }}], {title: 'Scontrino'}).addTo(mymap);
+                </script>
+        </div>
+    </div>
+    {% endif %}
+    <div class="row">
+        <div class="col-xs-12 col-md-6">
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h3 class="panel-title">People</h3>
@@ -36,18 +61,25 @@
                     {% endif %}
                 </div>
             </div>
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Testo OCR</h3>
+                </div>
+                <div class="panel-body">
+                    {% if object.ocr_text %}
+                    <pre>
+                        {{ object.ocr_text }}
+                    </pre>
+                    {% else %}
+                        <p>Testo OCR non disponibile per questo scontrino</p>
+                    {% endif %}
+                </div>
+            </div>
         </div>
-        <div class="col-xs-6 col-md-3">
+        <div class="col-xs-12 col-md-6">
             <a href="#" class="thumbnail">
                 <img src="{{ object.image.url }}" alt="receipt">
             </a>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-xs-6">
-            <pre>
-                {{ object.ocr_text }}
-            </pre>
         </div>
     </div>
 {% endblock %}
